main page implementation